# kkutbot

./: .deepsource.toml  .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  config.example.yml  config.py  config.yml  converter.py  core.py  dev-requirements.txt  docker-compose.yml  main.py  mgob.example.yml  mgob.yml  migrate.py  mongo.example.env  mongob.example.yml  mongod.conf  mypy.ini  privacy.md  pyproject.toml  requirements.txt  setup.py  views.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: -----.md  ----.md
.github/workflows/: build.yml  freeze.yml  isort.yml  lint-and-format.yml  lint.yml  python-package.yml  ruff.yml
cogs/: admin.py  botinfo.py  easter.py  economy.py  game.py  jsk.py  misc.py  profile.py  social.py
data/: default_data.json
database/: __init__.py  client.py  models.py
ext/: bot.py  config.py  converter.py  core.py  db.py  hanmaru.py  utils.py
extensions/admin/: __init__.py  admin.py  converter.py  views.py
extensions/botinfo/: __init__.py  help.py  invite.py  views.py
extensions/economy/: __init__.py  attendance.py  point.py  quest.py  views.py
extensions/game/: __init__.py  game.py  models.py  utils.py  views.py
extensions/jsk/: __init__.py  jishaku.py
extensions/profile/: __init__.py  profile.py  views.py
extensions/social/: __init__.py  announcement.py  ranking.py  views.py
general/: DUlaw.json  default_data.json  emojis.json  modelist.json  perms.json  quest.json
schema/: default_data.json  emojis.json  perms.json  quests.json  tierlist.json
static/: default_data.json  emojis.json  perms.json  quests.json  tierlist.json
tools/: __init__.py  autocomplete.py  config.py  converter.py  db.py  logger.py  models.py  overides.py  paginator.py  utils.py  views.py  webupdater.py
views/: admin.py  botinfo.py  game.py  general.py  profile.py  social.py
