[project]
name = "kkutbot"
version = "2.2-a"
description = "끝말잇기 디스코드봇"
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "apscheduler==3.10.1",
    "beanie==1.20.0",
    "discord-py[speed]==2.3.1",
    "humanize==4.7.0",
    "jishaku[procinfo]==2.5.1",
    "koreanbots==2.1.0",
    "motor==3.2.0",
    "pyyaml==6.0",
    "rich==13.4.2",
    "sentry-sdk==1.29.2",
    "topggpy==1.4.0",
]

[dependency-groups]
dev = [
    "flake8==5.0.4",
    "isort==5.12.0",
    "mypy>=1.16.0",
]

[tool.isort]
skip_gitignore = true
line_length = "150"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = false
warn_unused_configs = true
show_error_codes = true
disable_error_code = "misc"
exclude = ".venv"

[[tool.mypy.overrides]]
module = ["discord.*", "motor.*", "apscheduler.*", "yaml.*", "rich.*", "koreanbots.*", "topgg.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tools.views"]
ignore_errors = true
