[project]
name = "kkutbot"
version = "2.2.0-alpha"
description = "끝말잇기 디스코드봇"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "apscheduler>=3.11.0",
    "beanie>=1.29.0",
    "discord-py[speed]>=2.5.2",
    "humanize>=4.12.3",
    "jishaku[procinfo]>=2.6.0",
    "koreanbots>=3.1.0",
    "motor>=3.7.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "sentry-sdk>=2.29.1",
    "topggpy>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 150
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = false
warn_unused_configs = true
show_error_codes = true
disable_error_code = "misc"
exclude = ".venv"

[[tool.mypy.overrides]]
module = ["discord.*", "motor.*", "apscheduler.*", "yaml.*", "rich.*", "koreanbots.*", "topgg.*", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tools.views"]
ignore_errors = true
